--- a/templates/base.html
+++ b/templates/base.html
@@ -266,15 +266,8 @@
         .action-name {
             color: var(--error);
             font-weight: 600;
+            font-style: italic;
             margin-right: 4px;
-        }
-
-        .action-name::before {
-            content: '[';
-        }
-
-        .action-name::after {
-            content: ']';
         }
 
         /* User info */
