--- a/templates/index.html
+++ b/templates/index.html
@@ -142,25 +142,25 @@
             <a href="/chatbot" class="card example-card">
                 <div class="example-icon">💬</div>
                 <h3>Chatbot</h3>
-                <p>감정과 행동 표현이 가능한 챗봇 예시</p>
+                <p>챗봇 예시</p>
             </a>
             
             <a href="/avatar" class="card example-card">
                 <div class="example-icon">🧑‍🎨</div>
                 <h3>아바타</h3>
-                <p>행동에 따라 아바타가 반응하는 예시</p>
+                <p>아바타 예시</p>
             </a>
             
             <a href="/robot" class="card example-card">
                 <div class="example-icon">🤖</div>
                 <h3>로봇</h3>
-                <p>로봇 제어 명령을 콘솔로 확인하는 예시</p>
+                <p>로봇 제어 예시</p>
             </a>
             
             <a href="/affinity" class="card example-card">
                 <div class="example-icon">❤️</div>
                 <h3>호감도</h3>
-                <p>대화에 따라 호감도가 변하는 예시</p>
+                <p>호감도 예시</p>
             </a>
         </div>
     </section>
