--- a/templates/avatar.html
+++ b/templates/avatar.html
@@ -422,7 +422,7 @@
             height: 450
         });
 
-        const modelUrl = 'https://cdn.jsdelivr.net/npm/live2d-widget-model-haruto@1.0.5/assets/haruto.model.json';
+        const modelUrl = 'https://cdn.jsdelivr.net/npm/live2d-widget-model@1.0.1/model/ShizukuTalk/shizuku-48/index.json';
         
         try {
             live2dModel = await PIXI.live2d.Live2DModel.from(modelUrl);
