아바타 출처 명시, 폴백 아바타도 같은 cdn 출처로 변경

--- a/templates/avatar.html
+++ b/templates/avatar.html
@@ -327,6 +327,7 @@
             </div>
 
             <div class="avatar-badge">Powered by <a href="https://www.live2d.com/" target="_blank">Live2D</a></div>
+            <div class="avatar-badge">Avatar by <a href="https://cdn.jsdelivr.net/npm/live2d-widget-model@1.0.1/" target="_blank">live2d-widget-model</a></div>
         </div>
     </div>
 
@@ -455,7 +456,7 @@
             
             try {
                 live2dModel = await PIXI.live2d.Live2DModel.from(
-                    'https://cdn.jsdelivr.net/gh/guansss/pixi-live2d-display/test/assets/haru/haru_greeter_t03.model3.json'
+                    'https://cdn.jsdelivr.net/npm/live2d-widget-model@1.0.1/model/Potion-Maker/Pio/index.json'
                 );
                 
                 live2dModel.scale.set(0.08);
