아바타 배지 표기 위치 변경. 겹치는 문제 해결

--- a/templates/avatar.html
+++ b/templates/avatar.html
@@ -92,6 +92,9 @@
         padding: 2px 8px;
         border-radius: var(--radius-sm);
     }
+    .avatar-badge-top {
+        bottom: 85px;
+    }
 
     .avatar-badge a {
         color: var(--gray-500);
@@ -326,7 +329,7 @@
                 <span id="avatarStatusText">대기 중</span>
             </div>
 
-            <div class="avatar-badge">Powered by <a href="https://www.live2d.com/" target="_blank">Live2D</a></div>
+            <div class="avatar-badge-top">Powered by <a href="https://www.live2d.com/" target="_blank">Live2D</a></div>
             <div class="avatar-badge">Avatar by <a href="https://cdn.jsdelivr.net/npm/live2d-widget-model@1.0.1/" target="_blank">live2d-widget-model</a></div>
         </div>
     </div>
