--- a/templates/avatar.html
+++ b/templates/avatar.html
@@ -329,7 +329,7 @@
                 <span id="avatarStatusText">대기 중</span>
             </div>
 
-            <div class="avatar-badge-top">Powered by <a href="https://www.live2d.com/" target="_blank">Live2D</a></div>
+            <div class="avatar-badge avatar-badge-top">Powered by <a href="https://www.live2d.com/" target="_blank">Live2D</a></div>
             <div class="avatar-badge">Avatar by <a href="https://cdn.jsdelivr.net/npm/live2d-widget-model@1.0.1/" target="_blank">live2d-widget-model</a></div>
         </div>
     </div>
